creación de carpeta components y modulo aceptación terms y cond

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -29,5 +29,11 @@
    
    
   </p>
-  <button mat-raised-button color="primary">Continuar</button>
+  <section>
+    <div class="button-label"></div>
+    <div class="button-row">
+      <button mat-raised-button color="warn">Continuar</button>
+
+    </div>
+  </section>
   </div>
