--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -26,11 +26,7 @@
     background-color: #000000;
     border: 1px solid #1d5dc9;
   }
-  .text-2 {
-    text-align: center;
-    vertical-align: top;
-    font-size: 20px;
-    font-family: Open Sans;
-    line-height: auto;
-    color: #ffffff;
+  .button-row {
+    display: flex;
+    max-width: 600px;
   }
