--- a/src/app/pantalla1/pantalla1.component.html
+++ b/src/app/pantalla1/pantalla1.component.html
@@ -1,1 +1,46 @@
-<p>pantalla1 works!</p>
+
+
+
+<div class="frame-3">
+    <div class="frame-7">
+      <img src="" />
+      <img src="" />
+      <img src="" />
+      <img src="" />
+      <img src="" />
+    </div>
+    <div class="frame-8">
+      <img src="" />
+      <img src="" />
+      <img src="" />
+      <img src="" />
+      <img src="" />
+    </div>
+    <div class="rectangle-6-3" />
+    <p class="text-1-1">Agregar productos</p>
+    <img src="" />
+    <p class="text-1-2">Te conviene saber</p>
+    <p class="text-1-3">Tus finanzas</p>
+    <img src="" />
+    <div class="rectangle-6-6" />
+    <p class="text-1-5">Mis productos</p>
+    <img src="" />
+    <div class="group-3">
+      <div class="frame-1-1">
+        <div class="group-2">
+          <div class="rectangle-7-0" />
+          <p class="text-1-6">Otros
+  $308,000.00</p>
+          <div class="rectangle-6-9" />
+          <p class="text-1-7">Pagos$2,310,000.00</p>
+          <div class="rectangle-6-8" />
+          <p class="text-1-8">Transferencias
+  1,540,000.00</p>
+          <div class="rectangle-6-7" />
+          <p class="text-1-9">Compras$3,465,000.00</p>
+        </div>
+      </div>
+      <img src="" />
+      <p class="text-2-1">Tus gastos</p>
+    </div>
+  </div>
