Reorganización de componentes

--- a/src/app/pantalla1/pantalla1.component.html
+++ b/src/app/pantalla1/pantalla1.component.html
@@ -1,46 +1,63 @@
 
-
-
-<div class="frame-3">
-    <div class="frame-7">
-      <img src="" />
-      <img src="" />
-      <img src="" />
-      <img src="" />
-      <img src="" />
-    </div>
-    <div class="frame-8">
-      <img src="" />
-      <img src="" />
-      <img src="" />
-      <img src="" />
-      <img src="" />
-    </div>
-    <div class="rectangle-6-3" />
-    <p class="text-1-1">Agregar productos</p>
-    <img src="" />
-    <p class="text-1-2">Te conviene saber</p>
-    <p class="text-1-3">Tus finanzas</p>
-    <img src="" />
-    <div class="rectangle-6-6" />
-    <p class="text-1-5">Mis productos</p>
-    <img src="" />
-    <div class="group-3">
-      <div class="frame-1-1">
-        <div class="group-2">
-          <div class="rectangle-7-0" />
-          <p class="text-1-6">Otros
-  $308,000.00</p>
-          <div class="rectangle-6-9" />
-          <p class="text-1-7">Pagos$2,310,000.00</p>
-          <div class="rectangle-6-8" />
-          <p class="text-1-8">Transferencias
-  1,540,000.00</p>
-          <div class="rectangle-6-7" />
-          <p class="text-1-9">Compras$3,465,000.00</p>
+<body>
+    <header>
+        <div class="logo">
+            
+            <img src="../assets/logo.png" alt="Logo CBit">
         </div>
-      </div>
-      <img src="" />
-      <p class="text-2-1">Tus gastos</p>
+       
+    </header>
+
+    <nav>
+      <a href="" class="nav-link"> Agregar Productos </a>
+    
+      <a href="" class="nav-link"> Mis Productos </a>
+    
+    </nav>
+
+
+
+    <div class="slider">
+      <ul class="slides">
+          <li><img src="../assets/BnCbia.png" alt="Imagen 1"></li>
+          <li><img src="../assets/davip.png" alt="Imagen 2"></li>
+          <li><img src="../assets/bbva.png" alt="Imagen 3"></li>
+          <li><img src="../assets/BBog.jpg" alt="Imagen 4"></li>
+          <li><img src="../assets/BCS.jpg" alt="Imagen 5"></li>
+          <li><img src="../assets/bocc.png" alt="Imagen 6"></li>
+          <li><img src="../assets/bpop.jpg" alt="Imagen 7"></li>
+          <li><img src="../assets/bavv.png" alt="Imagen 8"></li>
+          <li><img src="../assets/scot.png" alt="Imagen 9"></li>
+
+
+
+
+
+      </ul>
     </div>
-  </div>
+    
+    <nav>
+        <a href="" class="nav-link"> Te Conviene Saber</a>
+    </nav>
+
+    <div class="slider">
+      <ul class="slides">
+          <li><img src="../assets/nubank.jpg" alt="Imagen 10"></li>
+          <li><img src="../assets/cdt.jpg" alt="Imagen 11"></li>
+          <li><img src="../assets/bmia.GIF" alt="Imagen 12"></li>
+          <li><img src="../assets/Bbog.GIF" alt="Imagen 13"></li>
+          <li><img src="../assets/bavv.GIF" alt="Imagen 14"></li>
+          <li><img src="../assets/bbva.GIF" alt="Imagen 15"></li>
+          <li><img src="../assets/bAgr.GIF" alt="Imagen 16"></li>
+          <li><img src="../assets/colp.GIF" alt="Imagen 17"></li>
+          <li><img src="../assets/bcold.GIF" alt="Imagen 18"></li>
+          <li><img src="../assets/bpop.GIF" alt="Imagen 19"></li>
+
+      </ul>
+    </div>
+
+
+</body>
+
+
+
