--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,72 +1,2 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="app.component.css">
-    <title>Encabezado responsive con logo</title>
-</head>
-<body>
-    <header>
-        <div class="logo">
-            
-            <img src="../assets/logo.png" alt="Logo CBit">
-        </div>
-       
-    </header>
-
-    <nav>
-      <a href="" class="nav-link"> Agregar Productos </a>
-    
-      <a href="" class="nav-link"> Mis Productos </a>
-    
-    </nav>
-
-
-
-    <div class="slider">
-      <ul class="slides">
-          <li><img src="../assets/BnCbia.png" alt="Imagen 1"></li>
-          <li><img src="../assets/davip.png" alt="Imagen 2"></li>
-          <li><img src="../assets/bbva.png" alt="Imagen 3"></li>
-          <li><img src="../assets/BBog.jpg" alt="Imagen 4"></li>
-          <li><img src="../assets/BCS.jpg" alt="Imagen 5"></li>
-          <li><img src="../assets/bocc.png" alt="Imagen 6"></li>
-          <li><img src="../assets/bpop.jpg" alt="Imagen 7"></li>
-          <li><img src="../assets/bavv.png" alt="Imagen 8"></li>
-          <li><img src="../assets/scot.png" alt="Imagen 9"></li>
-
-
-
-
-
-      </ul>
-    </div>
-    
-    <nav>
-        <a href="" class="nav-link"> Te Conviene Saber</a>
-    </nav>
-
-    <div class="slider">
-      <ul class="slides">
-          <li><img src="../assets/nubank.jpg" alt="Imagen 10"></li>
-          <li><img src="../assets/cdt.jpg" alt="Imagen 11"></li>
-          <li><img src="../assets/bmia.GIF" alt="Imagen 12"></li>
-          <li><img src="../assets/Bbog.GIF" alt="Imagen 13"></li>
-          <li><img src="../assets/bavv.GIF" alt="Imagen 14"></li>
-          <li><img src="../assets/bbva.GIF" alt="Imagen 15"></li>
-          <li><img src="../assets/bAgr.GIF" alt="Imagen 16"></li>
-          <li><img src="../assets/colp.GIF" alt="Imagen 17"></li>
-          <li><img src="../assets/bcold.GIF" alt="Imagen 18"></li>
-          <li><img src="../assets/bpop.GIF" alt="Imagen 19"></li>
-
-      </ul>
-    </div>
-
-
-</body>
-</html>
-
-
-
+<app-pantalla1></app-pantalla1>
+<!-- <app-pantalla2></app-pantalla2> -->
