--- a/src/app/components/terminosycondisionesinicio/terminosycondisionesinicio.component.css
+++ b/src/app/components/terminosycondisionesinicio/terminosycondisionesinicio.component.css
@@ -1,6 +1,7 @@
 .frame-3 {
     border: rgb(15, 15, 15) 1px solid;
-    background-color: #0b2574;
+    background: linear-gradient(-225deg, rgba(245, 243, 243, 0.6) 5%, rgba(67, 138, 189, 0.6) 100%);
+
   }
   .rectangle-1-6 {
     margin: 0 auto;
@@ -23,10 +24,9 @@
     width: 192px;
     background-color: #000000;
     border: 1px solid #1d5dc9;
-  }.button-row{
-    align-items: first baseline;
   }
   .button-row {
-    display: flex;
+    display: rig;
     max-width: 600px;
+    align-items: first baseline;
   }
