Actializacion de las 2 pantallas

--- a/src/app/pantalla2/pantalla2.component.html
+++ b/src/app/pantalla2/pantalla2.component.html
@@ -1,1 +1,99 @@
 <p>pantalla2 works!</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Encabezado azul con logo</title>
+    <link rel="stylesheet" href="pantalla2.component.css">
+</head>
+
+
+<body>
+    <header>
+        <div class="logo">
+            
+            <img src="../assets/logo.png" alt="Logo CBit">
+        </div>
+       
+    </header>
+
+    <nav>
+      <a href="" class="nav-link"> Categorías </a>
+        
+    </nav>
+
+
+
+    <div class="carrousel">
+        <div class="conteCarrousel">
+            <div class="itemCarrousel" id="itemCarrousel-7">
+                <div class="itemCarrouselTarjeta"><li><a href="enlace2.html"><img src="../assets/categ.png" alt="Imagen 2"></a><span class="nombre-imagen">Todas</span></li>
+        </div>
+          <div class="itemCarrouselArrows">
+            <a href="#itemCarrousel-9"><img src="../assets/izqi.png" alt="izq"></a>
+            <a href="#itemCarrousel-8"><img src="../assets/dere.png" alt="dere"></a>
+          </div>
+        </div>
+            <div class="itemCarrousel" id="itemCarrousel-8">
+                <div class="itemCarrouselTarjeta"><li><a href="enlace2.html"><img src="../assets/cuentas.png" alt="Imagen 2"></a><span class="nombre-imagen">Cuentas</span></li>
+        </div>
+                <div class="itemCarrouselArrows">
+          <a href="#itemCarrousel-7"><img src="../assets/izqi.png" alt="izq"></a>
+                    <a href="#itemCarrousel-9"><img src="../assets/dere.png" alt="dere"></a>
+                </div>
+            </div>
+            <div class="itemCarrousel" id="itemCarrousel-9">
+                <div class="itemCarrouselTarjeta"><li><a href="enlace4.html"><img src="../assets/cdt.PNG" alt="Imagen 4"></a><span class="nombre-imagen">CDT</span></li>
+        </div>
+                <div class="itemCarrouselArrows">
+          <a href="#itemCarrousel-8"><img src="../assets/izqi.png" alt="izq"></a>
+                    <a href="#itemCarrousel-7"><img src="../assets/dere.png" alt="dere"></a>
+                </div>
+            </div>
+        </div>
+        <div class="conteCarrouselController">
+            <a href="#itemCarrousel-7">•</a>
+            <a href="#itemCarrousel-8">•</a>
+            <a href="#itemCarrousel-9">•</a>
+        </div>
+    </div>
+
+
+    <nav>
+        <a href="" class="nav-link"> Cuentas</a>
+    </nav>
+
+
+
+    <div class="tarjeta">
+        <div class="imagen">
+            <img src="../assets/BBog.jpg" alt="Imagen 5">
+            <span class="nombre-imagen">Monedero Saldo actual $  135.675.09</span>
+        </div>
+        <div class="imagen">
+            <img src="../assets/bocc.png" alt="Imagen 6">
+            <span class="nombre-imagen">Cuenta de Nomina Saldo actual $  2.652.298.98</span>
+        </div>
+        <div class="imagen">
+            <img src="../assets/bpop.jpg" alt="Imagen 7">
+            <span class="nombre-imagen">Cuenta de Ahorros Saldo actual $  250.657.65</span>
+        </div>
+    </div>   
+   
+
+    <nav>
+        <a href="" class="nav-link"> Tarjetas</a>
+    </nav>
+
+
+
+    <div class="tarjeta">
+        <div class="imagen">
+            <img src="../assets/bavv.png" alt="Imagen 8">
+            <span class="nombre-imagen">Tarjeta De Crédito Banco AV Villas</span>
+        </div>
+    </div>   
+
+
+</body>
