T&C actualizados, enlace de botón continuar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-aceptacionterminosycond></app-aceptacionterminosycond>
+<router-outlet></router-outlet>
+<!-- <app-terminosycondisionesinicio></app-terminosycondisionesinicio> -->
