--- a/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.html
+++ b/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.html
@@ -6,6 +6,7 @@
     <p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p>
     <p class="text-9">Conozco y acepto el reglamento y las condiciones de uso de CBITBannk</p>
     <section>      
+      <h1>dsadasd</h1>
       <label aceptarTeminos>
         <input type="checkbox" name="switch" id="switch">Declaro que he leido y autorizo los permisos y documentos decritos anteriormente.
       </label>
