--- a/src/app/components/terminosycondisionesinicio/terminosycondisionesinicio.component.html
+++ b/src/app/components/terminosycondisionesinicio/terminosycondisionesinicio.component.html
@@ -18,7 +18,7 @@
   </p>
   <section>
     <div class="button-row">  
-      <button mat-raised-button color="primary">Continuar</button>
+      <button mat-raised-button color="primary" (click)='aceptacionterminos()'>Continuar</button>
     </div>
   </section>
   </div>  
