--- a/src/app/components/terminosycondisionesinicio/terminosycondisionesinicio.component.css
+++ b/src/app/components/terminosycondisionesinicio/terminosycondisionesinicio.component.css
@@ -1,7 +1,7 @@
 .frame-3 {
     border: rgb(15, 15, 15) 1px solid;
-    background: linear-gradient(-225deg, rgba(245, 243, 243, 0.6) 5%, rgba(67, 138, 189, 0.6) 100%);
-
+    background: linear-gradient(100deg, #00B0F9, #00BFCF);
+    background-size: 100% 100%
   }
   .rectangle-1-6 {
     margin: 0 auto;
