--- a/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.html
+++ b/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.html
@@ -1,12 +1,14 @@
 <div class="app-aceptacionterminosycond">
-    <div class="tittle-cbit">
-      <img src="https://periferiaitgroup-my.sharepoint.com/personal/cesarbaez_cbit-online_com/Documents/OpenBanking/Demo/Imagenes/cbitbank.fw.png" alt="logo cbit bank">
+<div class="tittle-cbit">
+  <img src="../../../assets/cbitbank.fw.png" alt="Logo Cbitbank">
     </div>
-    <p class="text-7">Conozco y acepto el reglamento y las condiciones de uso de CBITBank</p>
-    <p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p>
-    <p class="text-9">Conozco y acepto el reglamento y las condiciones de uso de CBITBannk</p>
+      <ul class="list">
+        <li><p class="text-7">Conozco y acepto el reglamento y las condiciones de uso de CBITBank</p></li>
+        <li><p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p></li>
+        <li><p class="text-9">Conozco y acepto el reglamento y las condiciones de uso de CBITBannk</p></li>
+      </ul>
     <section>
-      <label aceptarTeminos>
+      <label class="aceptarTeminos">
         <input type="checkbox" name="switch" id="switch">Declaro que he leido y autorizo los permisos y documentos decritos anteriormente.
       </label>
     </section>
