detalles de forma, cambio de algunos nombres de etiquetas, ok

--- a/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.html
+++ b/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.html
@@ -1,22 +1,17 @@
 <div class="app-aceptacionterminosycond">
-<div class="tittle-cbit">
-  <img src="../../../assets/cbitbank.fw.png" alt="Logo Cbitbank">
-    </div>
-      <ul class="list">
-        <li><p class="text-7">Conozco y acepto el reglamento y las condiciones de uso de CBITBank</p></li>
-        <li><p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p></li>
-        <li><p class="text-9">Conozco y acepto el reglamento y las condiciones de uso de CBITBannk</p></li>
-      </ul>
-    <section>
-      <label class="aceptarTeminos">
-        <input type="checkbox" name="switch" id="switch">Declaro que he leido y autorizo los permisos y documentos decritos anteriormente.
-      </label>
-    </section>
-      <div class="rectangle-3-1">
-        <section>
-          <div class="button-row">  
-            <button mat-raised-button color="primary">Continuar</button>
-          </div>
-        </section>
+  <div class="tittle-cbit">
+    <img src="../../../assets/cbitbank.fw.png" alt="Logo Cbitbank">
+  </div>   
+  <ul class="list">
+    <li><p class="text-7">Conozco y acepto el reglamento y las condiciones de uso de CBITBank</p></li>
+    <li><p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p></li>
+    <li><p class="text-9">Conozco y acepto el reglamento y las condiciones de uso de CBITBannk</p></li>
+  </ul>
+  <label class="tx-aceptar-terms">
+    <input type="checkbox" name="switch" id="switch">
+    Declaro que he leido y autorizo los permisos y documentos decritos anteriormente.
+  </label>
+  <div class="button-row">  
+    <button mat-raised-button color="primary">Continuar</button>
   </div>
 </div>
