--- a/src/app/components/header/logo-cbit/logo-cbit.component.html
+++ b/src/app/components/header/logo-cbit/logo-cbit.component.html
@@ -1,7 +1,9 @@
 <p>
     <mat-toolbar-row>
         <span>
-            <img src="https://periferiaitgroup-my.sharepoint.com/personal/cesarbaez_cbit-online_com/Documents/OpenBanking/Demo/Imagenes/cbitbank.fw.png" alt="logo cbit bank">
+            <div class="tittle-cbit">
+                <img src="../../../assets/cbitbank.fw.png" alt="Logo Cbitbank">
+            </div>        
         </span>
     </mat-toolbar-row>
 </p>
