--- a/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.css
+++ b/src/app/components/aceptacionterminosycond/aceptacionterminosycond.component.css
@@ -1,8 +1,4 @@
 .app-aceptacionterminosycond {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
     padding: 360px 37px;
     gap: 10px;
     background: linear-gradient(100deg, #00B0F9, #00BFCF);
@@ -10,11 +6,12 @@
     border: 1px solid #000000
   }
   .list{
-    list-style-image: url("../../../assets/misc/flecha.png");
+    /*list-style-image: url("../../../assets/misc/flecha.png");*/
+    list-style-type: disclosure-closed;
     list-style-position: outside;
-    align-items: center;
+    color: #ffffff;
   }
-  .aceptarTeminos{
+  .tx-aceptar-terms{
     color: #ffffff;
   }
   .tittle-cbit{
@@ -55,12 +52,7 @@
     line-height: auto;
     color: #ffffff;
   }
-  .rectangle-3-1 {
-    height: 25px;
-    width: 25px;
-    background-color: #0751b3;
-    border: 4px solid #00bfcf;
-  }
+
   .rectangle-5 {
     border-radius: 10px;
     height: 58px;
@@ -76,7 +68,7 @@
     line-height: auto;
     color: rgba(109, 100, 100, 0.4699999988079071);
   }
-  .aceptarTeminos{
+  .tx-aceptar-terms{
     margin-right: 10px;
     text-align: left;
     vertical-align: top;
@@ -84,4 +76,9 @@
     font-family: Open Sans;
     line-height: auto;
     color: #ffffff;
+  }
+  .button-row{
+    justify-content: center;
+    align-items: center;
+    display:flex;
   }
