Creación de formulario de registro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-background></app-background>
+<!-- <app-background1></app-background1> -->
+<app-background2></app-background2>
+<!-- <app-header></app-header> -->
+<!-- <app-indicator-signin-user></app-indicator-signin-user> -->
