--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,3 +1,7 @@
+body{
+  background: linear-gradient(135deg, #01AFF9, #038BDE);
+  /* background: transparent; */
+}
 img{
   width: 50%;
   height: auto;
@@ -7,6 +11,8 @@ img{
   padding: 1.5rem 0 0.5rem 0;
   display: flex;
   justify-content: center;
+  position: sticky;
+  top: 0;
 }
 h1{
   font-size: 2.5rem;
@@ -16,4 +22,5 @@ h1{
   color: white;
   left: 1rem;
 }
+
 
