--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
-<div class="container">
-  <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
-  <img src="../../../assets/logo.png" alt="Logo Cbitbank">
-</div>
+<body>
+  <div class="container">
+    <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
+    <img src="../../../assets/logo.png" alt="Logo Cbitbank">
+  </div>
+</body>
