Validacion de email y confirmEmail

--- a/src/app/components/background2/background2.component.css
+++ b/src/app/components/background2/background2.component.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(135deg, #00B0F9, #0B2794);
+  background: linear-gradient(135deg, #00B0F9, #1F2A95);
   min-height: 100vh;
   background-size: 100% 100%;
   background-repeat: no-repeat;
