Se agrega la pantalla de loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-background1></app-background1> -->
-<app-background2></app-background2>
+<!-- <app-background2></app-background2> -->
 <!-- <app-header></app-header> -->
 <!-- <app-indicator-signin-user></app-indicator-signin-user> -->
+<app-loading-begin></app-loading-begin>
