Organización de compontentes, templates y pages

--- a/src/app/components/header-cbit/header-cbit.component.css
+++ b/src/app/components/header-cbit/header-cbit.component.css
@@ -1,6 +1,8 @@
 body{
   background: linear-gradient(135deg, #01AFF9, #038BDE);
   /* background: transparent; */
+  position: sticky;
+  top: 0;
 }
 img{
   width: 50%;
