--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<!-- <app-background1></app-background1> -->
-<!-- <app-background2></app-background2> -->
-<!-- <app-header></app-header> -->
+<!-- <app-header-cbit></app-header-cbit> -->
+<!-- <app-btn-cbit></app-btn-cbit> -->
 <!-- <app-indicator-signin-user></app-indicator-signin-user> -->
+<!-- <app-item-registro></app-item-registro> -->
+
+<!-- <app-menu-registration></app-menu-registration> -->
+<!-- <app-form-registration></app-form-registration> -->
 <app-loading-begin></app-loading-begin>
