--- a/src/app/components/terms-accept/terms-accept.component.html
+++ b/src/app/components/terms-accept/terms-accept.component.html
@@ -1,7 +1,4 @@
-<div class="app-aceptacionterminosycond">
-  <div class="tittle-cbit">
-    <img src="../../../assets/cbitbank.fw.png" alt="Logo Cbitbank">
-  </div>   
+<div class="app-terms-accept">
   <ul class="list">
     <li><p class="text-7">Conozco y acepto el reglamento y las condiciones de uso de CBITBank</p></li>
     <li><p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p></li>
@@ -11,7 +8,7 @@
     <input type="checkbox" name="switch" id="switch">
     Declaro que he leido y autorizo los permisos y documentos decritos anteriormente.
   </label>
-  <div class="button-row">  
+  <div class="button-row"> 
     <button mat-raised-button color="primary">Continuar</button>
   </div>
 </div>
