--- a/src/app/components/terms-conditions/terms-conditions.component.css
+++ b/src/app/components/terms-conditions/terms-conditions.component.css
@@ -1,6 +1,6 @@
 .frame-3 {
     border: rgb(15, 15, 15) 1px solid;
-    background: linear-gradient(100deg, #00B0F9, #00BFCF);
+    background: linear-gradient(100deg, #dbdddf, #feffff);
     background-size: 100% 100%
   }
   .rectangle-1-6 {
