--- a/src/app/components/terms-conditions/terms-conditions.component.html
+++ b/src/app/components/terms-conditions/terms-conditions.component.html
@@ -1,4 +1,7 @@
-<div class="frame-3">
+<div class="frame-3">  
+<div class="tittle-cbit">
+  <app-header-cbit></app-header-cbit>
+</div> 
     <div class="rectangle-1-6">
       <p class="tittle-text-1">
         ACEPTACIÓN TÉRMINOS Y CONDICIONES<br>
