Modificación de models y servicios, traer id de DB

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 <!-- <app-item-registro></app-item-registro> -->
 
 <!-- <app-menu-registration></app-menu-registration> -->
-<!-- <app-form-registration></app-form-registration> -->
-<app-loading-begin></app-loading-begin>
+<app-form-registration></app-form-registration>
+<!-- <app-loading-begin></app-loading-begin> -->
