Agregado el Componente back

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <!-- <app-btn-cbit></app-btn-cbit> -->
 <!-- <app-indicator-signin-user></app-indicator-signin-user> -->
 <!-- <app-item-registro></app-item-registro> -->
+<!-- <app-back></app-back> -->
 
 <!-- <app-menu-registration></app-menu-registration> -->
 <app-form-registration></app-form-registration>
