--- a/src/app/components/header-cbit/header-cbit.component.html
+++ b/src/app/components/header-cbit/header-cbit.component.html
@@ -1,6 +1,6 @@
 <body>
   <div class="container">
-    <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
-    <img src="../../../assets/logo.png" alt="Logo Cbitbank">
+    <app-back [routerLink]=""></app-back>
+    <img src="../../../assets/logo.png" alt="Logo Cbitbank" />
   </div>
 </body>
