--- a/src/app/components/header-cbit/header-cbit.component.html
+++ b/src/app/components/header-cbit/header-cbit.component.html
@@ -1,3 +1,6 @@
-<div class="logo-cbit">
-    <img src="../../../assets/logo-cbit-tx-im.png" alt="logoCBIT">
-</div>
+<body>
+    <div class="logo-cbit">
+        <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
+        <img src="../../../assets/logo-cbit-tx-im.png"  alt="logoCBIT">
+    </div>
+</body>
