--- a/src/app/components/terms-accept/terms-accept.component.css
+++ b/src/app/components/terms-accept/terms-accept.component.css
@@ -5,6 +5,27 @@
     background-size: 100% 100%;
     border: 1px solid #000000
   }
+  img{
+    width: 50%;
+    height: auto;
+  }
+  .logo-cbit{
+    text-align: center;
+    padding: 1.5rem 0 0.5rem 0;
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+  }
+  h1{
+    font-size: 2.5rem;
+  }
+  .bi{
+    position: absolute;
+    color: antiquewhite;
+    left: 1rem;
+  }
+
   .list{
     /*list-style-image: url("../../../assets/misc/flecha.png");*/
     list-style-type: disclosure-closed;
