--- a/src/app/components/terms-accept/terms-accept.component.html
+++ b/src/app/components/terms-accept/terms-accept.component.html
@@ -1,4 +1,10 @@
 <div class="app-terms-accept">
+
+    <div class="logo-cbit">
+        <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
+        <img src="../../../assets/logo-cbit-imup-txdwn.png"  alt="logoCBIT">
+    </div>
+
   <ul class="list">
     <li><p class="text-7">Conozco y acepto el reglamento y las condiciones de uso de CBITBank</p></li>
     <li><p class="text-8">Autorizo el uso de mis datos sensibles para las finalidades aqui descristas</p></li>
