--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
 <!-- <app-indicator-signin-user></app-indicator-signin-user> -->
 <!-- <app-item-registro></app-item-registro> -->
 <!-- <app-back></app-back> -->
+<app-header-login></app-header-login>
 
 <!-- <app-menu-registration></app-menu-registration> -->
-<app-form-registration></app-form-registration>
+<!-- <app-form-registration></app-form-registration> -->
 <!-- <app-loading-begin></app-loading-begin> -->
+<!-- <app-login></app-login> -->
