ütimo cambio ok

--- a/src/app/components/header-cbit/header-cbit.component.html
+++ b/src/app/components/header-cbit/header-cbit.component.html
@@ -1,6 +1,6 @@
-<body>
+<header>
     <div class="logo-cbit">
         <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
         <img src="../../../assets/logo-cbit-tx-im.png"  alt="logoCBIT">
     </div>
-</body>
+</header>
