Agregado el header entity, help, back e inicio de add-product.

--- a/src/app/MIAS/entity/entity.component.css
+++ b/src/app/MIAS/entity/entity.component.css
@@ -1,6 +1,3 @@
-.entity {
-    width: 150px;
-    margin-bottom: 48px;
-    justify-self: center;
-    display: none;
-  }
+img {
+  justify-self: center;
+}
