--- a/src/app/MIAS/entity/entity.component.html
+++ b/src/app/MIAS/entity/entity.component.html
@@ -1,2 +1,4 @@
-<img class="logo-entity" src="./assets/Imagenes/Nequi.jpg" alt="LogoNequi"/>
+<div class="logo-entity">
+    <img src="./assets/Imagenes/Nequi.jpg" alt="LogoNequi"/>
+</div>
 
