--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,5 @@
 <!-- <app-form-registration></app-form-registration> -->
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
+<!-- <app-header-entity></app-header-entity> -->
+<app-add-product></app-add-product>
