--- a/src/app/components/utils/back/back.component.css
+++ b/src/app/components/utils/back/back.component.css
@@ -1,12 +1,7 @@
-h1 {
-  font-size: 2.5rem;
-  cursor: pointer;
+.bi-chevron-left {
+  color: #ffffff;
+  font-size: 32px;
 }
-.bi {
-  position: absolute;
-  color: white;
-  left: 1rem;
-}
-.bi:hover {
-  color: #0158f9;
+i{
+  text-align: left;
 }
