--- a/src/app/components/headers/header-login/header-login.component.html
+++ b/src/app/components/headers/header-login/header-login.component.html
@@ -1,4 +1,17 @@
 <div class="container">
-  <img class="nombre-empresa" src="../../../assets/NombreCbit.png" alt="NombreCbit">
-  <img class="logo-cbit" src="../../../assets/LogoCbit.png" alt="Logo Cbitbank" />
+  <div class="icono-help">
+    <app-help></app-help>
+  </div>
+  <div class="logos">
+    <img
+      class="nombre-empresa"
+      src="../../../assets/NombreCbit.png"
+      alt="NombreCbit"
+    />
+    <img
+      class="logo-cbit"
+      src="../../../assets/LogoCbit.png"
+      alt="Logo Cbitbank"
+    />
+  </div>
 </div>
