--- a/src/app/components/utils/btn-cbit/btn-cbit.component.html
+++ b/src/app/components/utils/btn-cbit/btn-cbit.component.html
@@ -2,7 +2,7 @@
   <button
     type="{{ type }}"
     class="btn btn-primary"
-    [routerLink]="['{{routerLink}}']"
+    [routerLink]="routerLink"
     [disabled]="disabled"
   >
     {{ text }}
