--- a/src/app/components/headers/header-cbit/header-cbit.component.css
+++ b/src/app/components/headers/header-cbit/header-cbit.component.css
@@ -1,18 +1,20 @@
 body {
   background: linear-gradient(135deg, #01aff9, #038bde);
-  /* background: transparent; */
   position: sticky;
   top: 0;
 }
 img {
+  min-width: 200px;
   width: 50%;
   height: auto;
 }
 .container {
+  max-width: 95%;
   text-align: center;
   padding: 1.5rem 0 0.5rem 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   position: sticky;
   top: 0;
 }
