--- a/src/app/components/headers/header-login/header-login.component.css
+++ b/src/app/components/headers/header-login/header-login.component.css
@@ -1,15 +1,24 @@
 .container {
-  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+}
+.icono-help{
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 1rem;
+
+}
+.logos{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  padding: calc(100vh * 0.15) 0 calc(100vh * 0.05) 0;
+  gap: 2rem;
+  padding: calc(100vh * 0.05) 0 calc(100vh * 0.05) 0;
 }
 .nombre-empresa {
   width: 70%;
 }
 .logo-cbit {
-  width: 30%;
+  width: 40%;
 }
