--- a/src/app/components/utils/back/back.component.html
+++ b/src/app/components/utils/back/back.component.html
@@ -1,3 +1,3 @@
-<h1 class="icon">
-  <i class="bi bi-chevron-compact-left" [routerLink]="routerLink"></i>
-</h1>
+<a [routerLink]="routerLink">
+  <i class="bi bi-chevron-compact-left"></i>
+</a>
