--- a/src/app/pages/form-registration/form-registration.component.html
+++ b/src/app/pages/form-registration/form-registration.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-header-cbit></app-header-cbit>
+  <app-header-cbit [routerLink]=""></app-header-cbit>
   <div class="container text-center">
     <h1 class="titulo">Ingrese sus datos</h1>
     <app-indicator-signin-user></app-indicator-signin-user>
