--- a/src/app/pages/terms-accept/terms-accept.component.html
+++ b/src/app/pages/terms-accept/terms-accept.component.html
@@ -1,7 +1,7 @@
 <div class="app-terms-accept">
 
     <div class="logo-cbit">
-        <h1 class="icon"><i class="bi bi-chevron-compact-left"></i></h1>
+        <h1 class="icon"><app-back [routerLink]="'/terminosinicial'"></app-back></h1>
         <img src="../../../assets/logo-cbit-imup-txdwn.png"  alt="logoCBIT">
     </div>
 
