Inicio de form-phone-confirm

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- <app-header-cbit></app-header-cbit> -->
 <!-- <app-btn-cbit></app-btn-cbit> -->
-<!-- <app-indicator-signin-user></app-indicator-signin-user> -->
+<!-- <app-indicator></app-indicator> -->
 <!-- <app-item-registro></app-item-registro> -->
 <!-- <app-back></app-back> -->
 <!-- <app-header-login></app-header-login> -->
@@ -9,3 +9,4 @@
 <!-- <app-form-registration></app-form-registration> -->
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
+<app-form-phone-confirm></app-form-phone-confirm>
