--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,7 @@
 <!-- <app-form-registration></app-form-registration> -->
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
+
+<!-- MARKETPLACE -->
+<app-product></app-product>
+<!-- <app-list-products></app-list-products> -->
