Conexion inicial de componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,6 @@
 <!-- <app-login></app-login> -->
 
 <!-- MARKETPLACE -->
-<app-product></app-product>
+<!-- <app-product></app-product> -->
 <!-- <app-list-products></app-list-products> -->
+<app-marketplace></app-marketplace>
