--- a/src/app/components/marketplace/utils/list-products/list-products.component.html
+++ b/src/app/components/marketplace/utils/list-products/list-products.component.html
@@ -1,3 +1,4 @@
+<app-header-marketplace></app-header-marketplace>
 <div class="container">
   <h1 class="text-center titulo">Listado de productos</h1>
 
