--- a/src/app/components/utils/btn-cbit/btn-cbit.component.html
+++ b/src/app/components/utils/btn-cbit/btn-cbit.component.html
@@ -1,6 +1,6 @@
 <div class="boton">
   <button
-    type="{{ type }}"
+    [type]="type"
     class="btn btn-primary"
     [routerLink]="routerLink"
     [disabled]="disabled"
