--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -30,11 +30,18 @@
         </div>
       </div>
 
+      <div
+        class="alert alert-danger"
+        *ngIf="!clienteExiste"
+      >
+        El cliente ingresado no existe
+      </div>
+
       <app-btn-cbit
         [text]="'Continuar'"
         [type]="'submit'"
         [disabled]="formLogin.invalid"
-        [routerLink]="'/'"
+        [routerLink]="'/wallet'"
       ></app-btn-cbit>
     </form>
 
