Agregados los TyC Bancolombia

--- a/src/app/components/marketplace/pages/tyc/tyc.component.css
+++ b/src/app/components/marketplace/pages/tyc/tyc.component.css
@@ -24,3 +24,10 @@
   justify-content: center;
   gap: 0.5rem;
 }
+.accordion-body{
+  display: flex;
+  justify-content: space-between;
+}
+.accordion{
+  height: 15rem;
+}
