--- a/src/app/components/marketplace/pages/tyc/tyc.component.html
+++ b/src/app/components/marketplace/pages/tyc/tyc.component.html
@@ -107,24 +107,24 @@
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#TyC_Cliente" aria-expanded="true" aria-controls="TyC_Cliente">
-            Accordion Item #1
+            Cliente
           </button>
         </h2>
         <div id="TyC_Cliente" class="accordion-collapse collapse show">
           <div class="accordion-body">
-            <strong>Términos y condiciones Cliente</strong> <a href="">Link</a>
+            <strong>Términos y condiciones Cliente</strong> <a href="{{ linkTyCCliente }}">Link</a>
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#TyC_Wallet" aria-expanded="true" aria-controls="TyC_Wallet">
-            Accordion Item #1
+            Billetera
           </button>
         </h2>
         <div id="TyC_Wallet" class="accordion-collapse collapse show">
           <div class="accordion-body">
-            <strong>Términos y condiciones Billetera</strong> <a href="">Link</a>
+            <strong>Términos y condiciones Billetera</strong> <a href="{{ linkTyCBilletera }}">Link</a>
           </div>
         </div>
       </div>
